--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "node .",
+    "start-dev": "NODE_ENV=development node .",
+    "start": "NODE_ENV=production node .",
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
