--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "start-dev": "NODE_ENV=development node .",
-    "start": "NODE_ENV=production node .",
+    "start": "if-env NODE_ENV=production && node . || nodemon .",
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
@@ -27,6 +26,8 @@
   "devDependencies": {
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
+    "if-env": "^1.0.0",
+    "nodemon": "^1.11.0",
     "nsp": "^2.1.0"
   },
   "repository": {
