--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
+    "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
